# Tools-for-the-MOPTOP-pipeline-products

./: README.md  citation.cff  general_tests.py  photometry_extraction.ipynb  plot_obj_pos_in_image.py  plot_pol_per_star.py  plot_qu_single_star.py  pyproject.toml  run.py  select_images.py  shift_and_combine_images.ipynb  tests.py  tools.py  typescript
fits_files/: __init__.py  fits_files.py
photometry/: __init__.py  photometry.py
random scripts/: plot_image_3_x_3.py
scripts/: 2D_correlation.py  3D_plot.py  calculate_plane_coeff.py  contour_plot.py  create_light_curve.py  create_manipulated_csv.py  create_qu_csv.py  overplot_img_catalog.py  plot_mean_images.py  plot_mean_obj_over_imgs.py  plot_obj_pos_in_image.py  plot_obj_pos_in_time.py  plot_pol_per_star.py  plot_pol_phase_single_star.py  plot_qu_graph.py  plot_qu_over_time.py  plot_qu_per_filter.py  plot_qu_single_star.py  plot_qu_x_flux_and_coords.py  rewrite_header_keyword.py  select_images.py  test.py  tools.py
scripts/csv/: .~lock.plane_coefficients.csv#  high polarized standard stars.csv  mean_qu_values.csv  plane_coefficients.csv
scripts/miscellaneous/: mjd_to_isot.py  plot_image_3_x_3.py
tests/: test_fits_files.py  test_photometry.py
tests/images/: 3_e_20230818_5_1_10_1.fits  3_e_20230818_5_1_11_1.fits  3_e_20230818_5_1_12_1.fits  3_e_20230818_5_1_13_1.fits  3_e_20230818_5_1_14_1.fits  3_e_20230818_5_1_15_1.fits  3_e_20230818_5_1_16_1.fits  3_e_20230818_5_1_1_1.fits  3_e_20230818_5_1_2_1.fits  3_e_20230818_5_1_3_1.fits  3_e_20230818_5_1_4_1.fits  3_e_20230818_5_1_5_1.fits  3_e_20230818_5_1_6_1.fits  (+51 more)
(+68 files in other folders)
