[tool.poetry]
name = "moptop-tools"
version = "0.1.0"
description = ""
authors = ["DBernardes <denis.bernardes099@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
matplotlib = "^3.10.0"
astropy = "^7.0.0"
ipykernel = "^6.29.5"
scipy = "^1.15.1"
sbpy = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
